tela de contato feita, tabela começada

--- a/Contato/page.html
+++ b/Contato/page.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de estoque</title>
+    <script src="../Contato/Script.js"></script>
 </head>
 <body>
+    <a href="../Menu/page.html">Voltar</a>
     <h1>Contato</h1>
+    <h2>Inserir dados iniciais para envio</h2>
+
+    <label for="nome">Seu nome:</label>
+    <input type="text" id="nome" placeholder="Digite seu nome">
+
+    <br><br>
+
+    <label for="mensagem">Observações</label>
+    <textarea id="mensagem" placeholder="Digite suas observações"></textarea>
+
+    <br><br>
+
+    <button onclick="conferirMensagemWhatsApp()">Conferir Mensagem</button>
+
+    <br><br>
+
+
+    <p>Nome: <span id="confNome"></span></p>
+    <p>Observações: <span id="confMsg"></span></p>
+    <p>Data: <span id="confDate"></span></p>
+
+    <br><br>
+
+    <button onclick="enviar()">Enviar mensagem</button>
+
 </body>
 </html>
