--- a/Menu/page.html
+++ b/Menu/page.html
@@ -15,7 +15,7 @@
             <li onclick="window.location.href='../Tabela/page.html'">Gerar Tabela</li>
             <li onclick="window.location.href='../Contato/page.html'">Enviar ao contato</li>
         </ul>
-        <img src="../Menu/Imagens/Logo.avif" alt="Logo" width="300" height="300">
+        <img src="../Imagens/Logo.avif" alt="Logo" width="300" height="300">
     </div>
 </body>
 </html>
